update typo in code snippet

--- a/gdi-intro-databases/class2.html
+++ b/gdi-intro-databases/class2.html
@@ -289,7 +289,7 @@ sqlite></pre></code>
 				<section>
 					<h3>View Tables</h3>
 					<p>Let's check out the tables included in the Chinook database:</p>
-					<pre><code contenteditable class="JavaScript">sqilte> .tables
+					<pre><code contenteditable class="JavaScript">sqlite> .tables
 Album          Employee       InvoiceLine    PlaylistTrack
 Artist         Genre          MediaType      Track
 Customer       Invoice        Playlist
@@ -300,7 +300,7 @@ sqlite>
 				<section>
 					<h3>Table Schemas</h3>
 					<p>We can also check out the schema for the tables.</p>
-					<pre><code contenteditable class="JavaScript">sqilte> .schema Artist
+					<pre><code contenteditable class="JavaScript">sqlite> .schema Artist
 CREATE TABLE [Artist]
 (
     [ArtistId] INTEGER  NOT NULL,
@@ -350,7 +350,7 @@ CREATE UNIQUE INDEX [IPK_Artist] ON [Artist]([ArtistId]);
 						<li>The output from a SELECT statement is always a grid of rows and columns.</li>
 						<li>The most simple SELECT statement retrieves all values from a single table</li>
 					</ul>
-					<pre><code contenteditable class="JavaScript">sqilte> SELECT * FROM Album;
+					<pre><code contenteditable class="JavaScript">sqlite> SELECT * FROM Album;
 1|For Those About To Rock We Salute You|1
 2|Balls to the Wall|2
 3|Restless and Wild|2
@@ -363,7 +363,7 @@ CREATE UNIQUE INDEX [IPK_Artist] ON [Artist]([ArtistId]);
 				<section>
 					<h3>SELECT .. WHERE</h3>
 					<p>You can have only a subset of rows returned by using the WHERE clause</p>
-					<pre><code contenteditable class="JavaScript">sqilte> SELECT *
+					<pre><code contenteditable class="JavaScript">sqlite> SELECT *
    ...> FROM Customer
    ...> WHERE FirstName = "Mark";
 14|Mark|Philips|Telus|8210 111 ST NW|Edmonton|AB|Canada|T6G 2C7|+1 (780) 434-4554|+1 (780) 434-5565|mphilips12@shaw.ca|5
