--- a/gdi-intro-databases/class2.html
+++ b/gdi-intro-databases/class2.html
@@ -469,9 +469,7 @@ sqlite>
 						<h3>Resources</h3>
 								<ul>
 										<li><a href="http://www.sqlite.org/whentouse.html">When to Use SQLite</a> - A list of good uses for SQLite, as well as situations where another RDMBS would be better.</li>
-										<li></li>
-										<li></li>
-										<li></li>
+										<li>More about <a href="http://www.tutorialspoint.com/sqlite/sqlite_where_clause.htm">SQLite WHERE clauses</a></li>
 							</ul>
 				</section>
 
