add slide for create database

--- a/gdi-intro-databases/class3.html
+++ b/gdi-intro-databases/class3.html
@@ -67,7 +67,9 @@
 					</ul>
         </section>
 
-
+				<section>
+					<h3>Create Database</h3>
+				</section>
 
         <section>
           <h2>Questions?</h2>
