--- a/gdi-intro-databases/class3.html
+++ b/gdi-intro-databases/class3.html
@@ -96,7 +96,12 @@ CREATE TABLE Testing(Id INTEGER);
 				</section>
 
 				<section>
-					<h3></h3>
+					<h3>Drop Tables</h3>
+					<p>The DROP statement is used to delete a table from a database.</p>
+					<pre><code contenteditable class="JavaScript">sqlite> DROP TABLE Testing;
+sqlite> .tables
+</code></pre>
+					<a href="http://xkcd.com/327/"><img src="images/exploits_of_a_mom.png"/></a>
 				</section>
 
         <section>
