--- a/gdi-intro-databases/index.html
+++ b/gdi-intro-databases/index.html
@@ -39,7 +39,7 @@
 				<section>
 					<h3>Introduction to Databases</h3>
                     <img src="images/gdi_logo_badge.png" alt="" />
-										<p><a href="class1.html">Class 1</a> | <a href="class2.html">Class 2</a> | Class 3 | Class 4</p>
+										<p><a href="class1.html">Class 1</a> | <a href="class2.html">Class 2</a> | <a href="class3.html">Class 3</a> | Class 4</p>
 				</section>
 			</div>
   		<footer>
