change slide title

--- a/gdi-intro-databases/class3.html
+++ b/gdi-intro-databases/class3.html
@@ -38,7 +38,7 @@
 			<div class="slides">
 				<section>
 					<h3>Introduction to Databases</h3>
-					<h4>Class 2 - Intro to SQL</h4>
+					<h4>Class 3 - More SQL</h4>
                     <img src="images/gdi_logo_badge.png" alt="" />
 				</section>
 
