--- a/gdi-intro-databases/class4.html
+++ b/gdi-intro-databases/class4.html
@@ -61,9 +61,13 @@
 					<h3>Overview</h3>
 					<p>Today, we will learn:</p>
 					<ul>
-						<li>A little relational algebra</li>
+						<li>Just a little relational algebra</li>
 						<li>SQL Joins</li>
 						<li>Indexes</li>
+						<li>Functions</li>
+						<li>Views</li>
+						<li>Triggers</li>
+						<li>Transactions</li>
 					</ul>
         </section>
 
