add relational algebra intro slides

--- a/gdi-intro-databases/class4.html
+++ b/gdi-intro-databases/class4.html
@@ -71,7 +71,23 @@
 					</ul>
         </section>
 
+				<section>
+					<h3>Relational Algebra</h3>
+					<p>Relational algebra is a procedural query language, which takes instances of
+						relations as input and yields instances of relations as output.</p>
+					<p>Operators are used to perform queries.</p>
+				</section>
 
+				<section>
+					<h3>Fundamental operations of relational algebra</h3>
+					<ul>
+						<li>Select</li>
+						<li>Project</li>
+						<li>Union</li>
+						<li>Set Difference</li>
+						<li>Cartesian Product</li>
+					</ul>
+				</section>
 
         <section>
           <h2>Questions?</h2>
